# uni-uno

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  .gitmodules  .sqliterc  ATTRIBUTION.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  README.md  RELEASING.md  TODO.md  cert.pem  conanfile.py  conanfile.txt  contract.json  deploy_frontend.sh  docker-compose.yml  itch-index.html  key.pem  setup.ps1  setup.sh
.github/workflows/: deploy.yml
conan/: release
contract/: asyncapi.yaml
deploy/: Caddyfile  README.md  bootstrap.sh  docker-compose.oci.yml  duckdns.service  duckdns.sh  duckdns.timer
frontend/: .prettierrc  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  typedoc.json  vite.config.js
frontend/public/: about.html  ads.txt  changelog.html  faq.html  how-to-play.html  manifest.webmanifest  robots.txt  seo.css  sitemap-index.xml  sitemap.xml
frontend/public/assets/: research.ase  tables.ase  titles.ase
frontend/public/images/: test.ase
frontend/scripts/: generate-schemas.js
frontend/src/: App.svelte  app.css  main.js
frontend/src/lib/: Counter.svelte  SocketManager.svelte.ts  protocol.ts  socket.svelte.ts  ws.svelte.ts  ws.ts
frontend/src/lib/__fixtures__/: index.ts
frontend/src/lib/__tests__/gameplay/: playerActions.test.ts
frontend/src/lib/__tests__/stores/: game.double-submit.test.ts  lobby.dedup.test.ts  lobby.handles.test.ts  ws.failfast.test.ts
frontend/src/lib/components/: Counter.svelte  MainScreen.svelte  StatisticsScreen.svelte  StatsScreen.svelte
frontend/src/lib/components/auth/: AuthScreen.svelte  LoginForm.svelte  RegisterForm.svelte
frontend/src/lib/components/common/: AdBanner.svelte  AdInterstitial.svelte  FormInput.svelte  LoadingSpinner.svelte  Modal.svelte  TextEffects.svelte  TintedSprite.svelte  Toast.svelte  Tooltip.svelte
frontend/src/lib/components/game/: DrawStackIndicator.svelte  FlyingCardsOverlay.svelte  GameActions.svelte  GameBoard.svelte  GameCard.svelte  GameCards.svelte  GameHud.svelte  GameOverPopup.svelte  GamePiles.svelte  GameScreen.svelte  GameUnoButton.svelte  GameVictoryPopup.svelte  OpponentHand.svelte  PlayerHand.svelte  SortableCardSlot.svelte  card-bus.svelte.ts
frontend/src/lib/components/game/actions/: ActionChooseTarget.svelte  ActionPickColor.svelte  ActionPlayDrawn.svelte
frontend/src/lib/components/game/popup/: GameInterruptedPopup.svelte  GameVictoryPopup.svelte
frontend/src/lib/components/lobbies/: CreateLobbyForm.svelte  LobbiesScreen.svelte  LobbyCard.svelte  LobbyJoinForm.svelte  LobbyList.svelte  LobbyScreen.svelte
frontend/src/lib/components/lobby/: LobbiesScreen.svelte  LobbyBrowse.svelte  LobbyCard.svelte  LobbyCreateForm.svelte  LobbyJoinForm.svelte  LobbyList.svelte  LobbySave.svelte  LobbyScreen.svelte  LobbySettings.svelte  UserSettingsForm.svelte
frontend/src/lib/components/lobby/settings/: EnumSelector.svelte  RulesGrid.svelte  Slider.svelte  Toggle.svelte
frontend/src/lib/components/stats/: DetailedStatsScreen.svelte  StatsScreen.svelte
frontend/src/lib/components/user/: UserSettingsForm.svelte
frontend/src/lib/stores/: analytics.svelte.ts  auth.svelte.ts  errors.ts  game.svelte.ts  lobby.svelte.ts  navigation.svelte.ts  stats.svelte.ts  toast.svelte.ts  ui.svelte.ts  ws.svelte.ts
frontend/src/lib/user/: UserSettingsForm.svelte
frontend/src/lib/utils/: errors.ts  validation.ts
include/: Logger.hpp  WebServer.hpp  action_router.hpp  database.hpp  env.hpp  error.hpp  http_router.hpp  logger.hpp  protocol.hpp  result.hpp  router.hpp  webserver.hpp  websocket_context.hpp
include/common/: base64.hpp  bot_names.hpp  contract.hpp  env.hpp  http.hpp  lobby.hpp  login_throttle.hpp  payloads.hpp  rate_limiter.hpp  ws.hpp
include/common/game/: card_types.hpp  effect.hpp  gamerule.hpp
include/common/match/: card_types.hpp  effect.hpp  matchrule.hpp
include/controllers/: auth_controller.hpp  game_controller.hpp  ilobby_store.hpp  lobby_controller.hpp  match_controller.hpp  stats_controller.hpp
include/game/: effect.hpp  effect_registry.hpp  game_state.hpp  match_instance.hpp  rule_registry.hpp
include/game/effects/: decide_swap_target.hpp  pass_hands.hpp  standard.hpp  standard_effects.hpp
include/game/rules/: standard.hpp
include/match/: effect_registry.hpp  match_instance.hpp  match_state.hpp  rule_registry.hpp
include/match/effects/: decide_swap_target.hpp  pass_hands.hpp  standard.hpp
include/match/rules/: standard.hpp
include/transport/: iaction_router.hpp  ibroadcaster.hpp  itimer_service.hpp  uws_broadcaster.hpp  uws_timer_service.hpp
scripts/: generate_contract_hpp.py  generate_ws_hpp.py
src/: WebServer.cpp  action_router.cpp  database.cpp  http_router.cpp  main.cpp  webserver.cpp
src/common/: login_throttle.cpp  rate_limiter.cpp
src/controllers/: auth_controller.cpp  game_controller.cpp  lobby_controller.cpp  match_controller.cpp  stats_controller.cpp
src/game/: game_controller.cpp  match_instance.cpp
src/game/effects/: decide_swap_target.cpp  pass_hands.cpp  standard.cpp
src/game/rules/: 70.cpp  draw_stacking.cpp  force_play.cpp  jump_in.cpp  no_bluffing.cpp  progressive.cpp  standard.cpp
src/match/: match_instance.cpp
src/match/effects/: decide_swap_target.cpp  pass_hands.cpp  standard.cpp
src/match/rules/: 70.cpp  draw_stacking.cpp  force_play.cpp  jump_in.cpp  no_bluffing.cpp  progressive.cpp  standard.cpp
src/transport/: uws_broadcaster.cpp  uws_timer_service.cpp
tests/e2e/: register.mjs
tests/unit/: lobby_controller_test.cpp  login_throttle_test.cpp  match_instance_test.cpp  rate_limiter_test.cpp  rules_test.cpp  serialization_test.cpp  test_main.cpp
tests/unit/support/: fake_broadcaster.hpp  fake_timer_service.hpp
